# fetchdeeznutz

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deeznutzwindow.cpp  deeznutzwindow.h  fetchdeeznuts.desktop  fetchdeeznutzwindow.cpp  fetchdeeznutzwindow.h  main.cpp
resources/: fetchdeeznuts-install.desktop  fetchdeeznutz-install.desktop  fetchdeeznutz.desktop  resources.qrc
src/: fetchdeeznutzwindow.cpp  fetchdeeznutzwindow.h  gitfetchworker.cpp  gitfetchworker.h  gitmodels.cpp  gitmodels.h  gitutils.cpp  gitutils.h  main.cpp  remoteselectiondialog.cpp  remoteselectiondialog.h  repositorydialog.cpp  repositorydialog.h  repositorystore.cpp  repositorystore.h  repositorytreemodel.cpp  repositorytreemodel.h  repowatcher.cpp  repowatcher.h
